discussion almost done

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -102,7 +102,7 @@ Here, we report nine experiments where we found (1) there is a robust good chara
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
 
-The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the effect could not be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group [@turner_rediscovering_1987]. Moral character is an important criterion for social categorization [@mchugh_moral_2019; @descioli_side_taking_2016]. However, the above four experiments could not distinguish between these two possibilities, because "good person" could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
+The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the effect could not be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group [@turner_rediscovering_1987]. Moral character is an important criterion for social categorization [@mchugh_moral_2021; @descioli_side_taking_2016]. However, the above four experiments could not distinguish between these two possibilities, because "good person" could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
 
 To distinguish the value-based account and the social categorization explanations, we introduced the identity (self- vs. other-referential) of moral character as an addition independent variable in exp 3a, 3b, and 6b. Now moral valence is orthogonal to the identity. In this case, the identity of moral character information become salient and participants are less likely to spontaneously categorize a good-other as an extension of self, but the value of good-person still exists. If the positivity effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. 
 
@@ -128,7 +128,7 @@ Key concepts and discussing points:
 
 **Identification**: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
 
-Morality as a way for social-categorization [@mchugh_moral_2019]? People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
+Morality as a way for social-categorization [@mchugh_moral_2021]? People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
 
 What is the relation between morally good and self in a semantic network (attractor network) (Freeman & Ambady, 2011)? The psychological essentialism account proposed that the moral good self is perspective independent, i.e., there is a moral good self in all. This perspective free effect is not exist in our effect.
 
@@ -2346,14 +2346,14 @@ The same trend appeared for the RT data. For shapes associated with good person,
 # Discussion
 [Summary of results] Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception [@xiao_perceiving_2016; @freeman_chapter_2020] by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making [van Bavel]. Previous research reported the effect of moral perception [] but the mechanism is disputed. For example, [Anderson et al 2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect [Stein et al]. Another studies by [] found that moral words are more likely to be judged as words when it was presented subliminally [], however, this effect may caused by semantic priming instead of morality [Jussim et al., 2016]. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [Firestone; Jussim et al., 2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
+[Effect of good character] The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual processes. Previous research reported the effect of moral perception but the mechanism is disputed. For example, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect [@stein_no_2017]. Another studies by [@gantman_moral_2014] found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming [@firestone_cognition_2015; @jussim_interpretations_2016] or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
 
-This positivity effect, though surprising at first, is largely consistent with previous studies. Positivity effect had been found in associative learning [], lexical decision-making [], and IAT []. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception [@pool_attentional_2016]. The task used in the current study may explain why the result are different from previous studies such as @anderson_visual_2011 and @eiserbeck_visual_2020, where the early processing stage were targeted by attention blink paradigm. 
+The prioritization of good character, however, demonstrated a different direction from previous moral perception studies. Previous moral perception research usually reported a negativity effect, i.e., information related to bad moral character are processed better [@anderson_visual_2011; @eiserbeck_visual_2020]. For instance, @anderson_visual_2011 reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well [@pool_attentional_2016].
 
-[Self-binding as a novel explanation and consistent with broader theory about morality] However, the theory that the good things are similar in the mental representation [] is not sufficient to explain the current results because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. Because it is the actor (participant) who making the perceptual decisions and execute the action, the prioritization of good-character can be explained by either a moral categorization theory, which suggest that moral character is a categorization factor and good person are categorized as in-group, or self as binding factor view, which suggest that there is a spontaneous self-referential processing. Our results suggest that the binding between good character and self may account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view [], suggesting that moral-self as true self is not only at self-report level but also at perceptual level. When good character presented together with non-other information, the responses was slowed down in perceptual processing. 
+[Self-binding as a novel explanation and consistent with broader theory about morality] We further tested whether prioritization effect of moral character was due to purely positive valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view [], suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level. 
 
 [Beyond the debate about penetration of perception] 
-One would argue that the effect here may represent an effect in memory or in decision-making process instead of perpetual effect *per se*. We agree that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. This suggest that we need to apply computational models to behavioral data and/or combined with data from other modules to quantify the processes underlying perceptual decisions. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory []. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self [] or moral self []. Moreover, reinforcement learning models also revealed that ....
+Instead of claiming the moral-self motivation *penetrates* perception, we suggest that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. In other words, we are not interested in against or for one side of the cognition-penetration debate [@firestone_bbs_2016]. Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory []. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self [] or good self [@Hu_2020_GoodSelf]. Meanwhile, reinforcement learning models also revealed that learning rate [@lockwood_nat_comm_2018]
 
 # References
 ```{r create_r-references, echo=FALSE,results='hide'}
