--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -263,7 +263,7 @@ We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to 
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests): first, BHM estimate the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provided an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
 
-We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (Goh, Hall, \& Rosenthal, 2016).
+We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (Goh, Hall, \& Rosenthal, 2016).
 
 \hypertarget{accuracy}{%
 \subsubsection{Accuracy}\label{accuracy}}
@@ -442,15 +442,14 @@ The same trend appeared for the RT data. For shapes associated with good person,
 
 {[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Further more, we found this prioritization of good character was modulated by a self-referential processing: prioritization only occur when moral characters are self-referential but not other-referential. This modulation effect of the prioritization of good character occurred even when self- or character- related information are irrelevant to the task. In contrast, when good character became other-referential, even implicitly, the information process was slowed down. Together, these findings highlight the importance of the self-referential in perceiving information related to good character, contributed to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people can prioritized not just physically salient, or affective stimuli, but also socially salient stimuli, i.e., instantly acquired moral information.
 
-{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual decision making {[}van Bavel{]}. Previous research reported the effect of moral perception {[}{]} but the mechanism is disputed. For example, {[}Anderson et al 2011{]} reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect {[}Stein et al{]}. Another studies by {[}{]} found that moral words are more likely to be judged as words when it was presented subliminally {[}{]}, however, this effect may caused by semantic priming instead of morality {[}Jussim et al., 2016{]}. In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming {[}Firestone; Jussim et al., 2016{]} or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
+{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the notion that morality do have an impact in perceptual processes. Previous research reported the effect of moral perception but the mechanism is disputed. For example, (E. Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect (Stein et al., 2017). Another studies by (Gantman \& Van Bavel, 2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In the current study, we used associative learning task where neutral stimuli, geometric shapes, acquired a moral meaning in the lab and then perform the perceptual matching task, which eliminated the possibility of semantics priming (Firestone \& Scholl, 2015; Jussim et al., 2016) or other confounding factors. Also, the effect was replicated from all five different sample, suggestion a robust prioritization effect of good character.
 
-This positivity effect, though surprising at first, is largely consistent with previous studies. Positivity effect had been found in associative learning {[}{]}, lexical decision-making {[}{]}, and IAT {[}{]}. A common feature of these paradigms is that decision-making occurs at relative later stage of the information processing in perception, instead of early sensory processing stage. In the current paradigm, participants made a matching judgment, which was only possible after participants formed a perception of both the shape and the label and retrieve the association between them. ample evidence supported the idea that positive stimuli have advantage at the later stage of perception (Pool et al., 2016). The task used in the current study may explain why the result are different from previous studies such as E. Anderson et al. (2011) and Eiserbeck and Abdel Rahman (2020), where the early processing stage were targeted by attention blink paradigm.
+The prioritization of good character, however, demonstrated a different direction from previous moral perception studies. Previous moral perception research usually reported a negativity effect, i.e., information related to bad moral character are processed better (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). For instance, E. Anderson et al. (2011) reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well (Pool et al., 2016).
 
-{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} However, the theory that the good things are similar in the mental representation {[}{]} is not sufficient to explain the current results because we only have three pair of stimuli and semantic meaning may not play a role. Also, compared to studies that using more ecological stimuli such as faces, we used geometric shape, which eliminated differences in low-level features. Because it is the actor (participant) who making the perceptual decisions and execute the action, the prioritization of good-character can be explained by either a moral categorization theory, which suggest that moral character is a categorization factor and good person are categorized as in-group, or self as binding factor view, which suggest that there is a spontaneous self-referential processing. Our results suggest that the binding between good character and self may account for the results, especially the results where either identity or moral character information were task-irrelevant. These results echo prior research on moral-self view {[}{]}, suggesting that moral-self as true self is not only at self-report level but also at perceptual level. When good character presented together with non-other information, the responses was slowed down in perceptual processing.
+{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} We further tested whether prioritization effect of moral character was due to purely positive valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view {[}{]}, suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level.
 
-{[}Perspective{]}
-
-{[}limitations{]} One would argue that the effect here may represent an effect in memory or in decision-making process instead of perpetual effect \emph{per se}. We agree that perceptual decision-making process include more processes than just perception. If we narrowly define perception as encoding of the sensory information, than perception is only one of many processes involved in a perceptual decision-making. This suggest that we need to further model the behavioral data and/or combined with other modules to deepen our understanding of the mechanism of the perceptual decision-making. For example, sequential sampling model suggested that a perceptual decision-making is a continuous evidence accumulation process and a decision is made when the amount of evidence passed a threshold. In this model, the evidence can accumulate from both sensory information but also memory{[}{]}. Recently application of sequential sample model to the perceptual matching task also suggestion that different process may contributed to the prioritization effect of self or moral self.
+{[}Beyond the debate about penetration of perception{]}
+Instead of claiming the moral-self motivation \emph{penetrates} perception, we suggest that perceptual decision-making process include more processes than just perception, if we define perception narrowly as encoding of the sensory information. In other words, we are not interested in against or for one side of the cognition-penetration debate (Firestone \& Scholl, 2016). Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory {[}{]}. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self {[}{]} or good self (Hu et al., 2020). Meanwhile, reinforcement learning models also revealed that learning rate (Lockwood et al., 2018)
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -479,10 +478,6 @@ Bargh, J. A., Chaiken, S., Govender, R., \& Pratto, F. (1992). The generality of
 \leavevmode\vadjust pre{\hypertarget{ref-baumeister_bad_2001}{}}%
 Baumeister, R. F., Bratslavsky, E., Finkenauer, C., \& Vohs, K. D. (2001). Bad is stronger than good. \emph{Review of General Psychology}, \emph{5}(4), 323--370. \url{https://doi.org/10.1037/1089-2680.5.4.323}
 
-\leavevmode\vadjust pre{\hypertarget{ref-Buxfcrkner_2017}{}}%
-Bürkner, P.-C. (2017). Brms: An r package for bayesian multilevel models using stan {[}Journal Article{]}. \emph{Journal of Statistical Software; Vol 1, Issue 1 (2017)}. Retrieved from \href{https://www.jstatsoft.org/v080/i01\%0Ahttp://dx.doi.org/10.18637/jss.v080.i01}{https://www.jstatsoft.org/v080/i01
-http://dx.doi.org/10.18637/jss.v080.i01}
-
 \leavevmode\vadjust pre{\hypertarget{ref-Carpenter_2017_stan}{}}%
 Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language {[}Journal Article{]}. \emph{Journal of Statistical Software}, \emph{76}(1). \url{https://doi.org/10.18637/jss.v076.i01}
 
@@ -495,11 +490,23 @@ Eiserbeck, A., \& Abdel Rahman, R. (2020). Visual consciousness of faces in the 
 \leavevmode\vadjust pre{\hypertarget{ref-ellemers_morality_2018}{}}%
 Ellemers, N. (2018). Morality and social identity. In M. van Zomeren \& J. F. Dovidio (Eds.), \emph{The oxford handbook of the human essence} (pp. 147--158). New York, {NY}, {US}: Oxford University Press.
 
+\leavevmode\vadjust pre{\hypertarget{ref-firestone_cognition_2015}{}}%
+Firestone, C., \& Scholl, B. J. (2015). Enhanced visual awareness for morality and pajamas? Perception vs. Memory in "top-down" effects. \emph{Cognition}, \emph{136}, 409--416. \url{https://doi.org/10.1016/j.cognition.2014.10.014}
+
+\leavevmode\vadjust pre{\hypertarget{ref-firestone_bbs_2016}{}}%
+Firestone, C., \& Scholl, B. J. (2016). Cognition does not affect perception: {Evaluating} the evidence for "top-down" effects. \emph{Behavioral and Brain Sciences}, \emph{39}, e229. \url{https://doi.org/10.1017/S0140525X15000965}
+
 \leavevmode\vadjust pre{\hypertarget{ref-fiske_attention_1980}{}}%
 Fiske, S. T. (1980). Attention and weight in person perception: The impact of negative and extreme behavior. \emph{Journal of Personality and Social Psychology}, \emph{38}(6), 889--906. \url{https://doi.org/10.1037/0022-3514.38.6.889}
 
+\leavevmode\vadjust pre{\hypertarget{ref-forstmann_ann_rev_2016}{}}%
+Forstmann, B. U., Ratcliff, R., \& Wagenmakers, E.-J. (2016). Sequential {Sampling} {Models} in {Cognitive} {Neuroscience}: {Advantages}, {Applications}, and {Extensions}. \emph{Annual Review of Psychology}, \emph{67}(1). \url{https://doi.org/10.1146/annurev-psych-122414-033645}
+
 \leavevmode\vadjust pre{\hypertarget{ref-freeman_chapter_2020}{}}%
 Freeman, J. B., Stolier, R. M., \& Brooks, J. A. (2020). Chapter five - dynamic interactive theory as a domain-general account of social perception. In B. Gawronski (Ed.), \emph{Advances in experimental social psychology} (Vol. 61, pp. 237--287). Academic Press. \url{https://doi.org/10.1016/bs.aesp.2019.09.005}
+
+\leavevmode\vadjust pre{\hypertarget{ref-gantman_moral_2014}{}}%
+Gantman, A. P., \& Van Bavel, J. J. (2014). The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli. \emph{Cognition}, \emph{132}(1), 22--29. \url{https://doi.org/10.1016/j.cognition.2014.02.007}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goh_2016_mini}{}}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how {[}Journal Article{]}. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. \url{https://doi.org/10.1111/spc3.12267}
@@ -516,14 +523,23 @@ Hofmann, W., Wisneski, D. C., Brandt, M. J., \& Skitka, L. J. (2014). Morality i
 \leavevmode\vadjust pre{\hypertarget{ref-Hu_2020_GoodSelf}{}}%
 Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valence influence self-prioritization during perceptual decision-making? {[}Journal Article{]}. \emph{Collabra: Psychology}, \emph{6}(1), 20. \url{https://doi.org/10.1525/collabra.301}
 
+\leavevmode\vadjust pre{\hypertarget{ref-jussim_interpretations_2016}{}}%
+Jussim, L., Crawford, J. T., Anglin, S. M., Stevens, S. T., \& Duarte, J. L. (2016). Interpretations and methods: {Towards} a more effectively self-correcting social psychology. \emph{Journal of Experimental Social Psychology}, \emph{66}, 116--133. \url{https://doi.org/10.1016/j.jesp.2015.10.003}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Liu_2020_JOPD}{}}%
 Liu, Q., Wang, F., Yan, W., Peng, K., Sui, J., \& Hu, C.-P. (2020). Questionnaire data from the revision of a chinese version of free will and determinism plus scale {[}Journal Article{]}. \emph{Journal of Open Psychology Data}, \emph{8}(1), 1. \url{https://doi.org/10.5334/jopd.49/}
 
+\leavevmode\vadjust pre{\hypertarget{ref-lockwood_nat_comm_2018}{}}%
+Lockwood, P. L., Wittmann, M. K., Apps, M. A. J., Klein-FlÃŒgge, M. C., Crockett, M. J., Humphreys, G. W., \& Rushworth, M. F. S. (2018). Neural mechanisms for learning self and other ownership. \url{https://doi.org/10.1038/s41467-018-07231-9}
+
 \leavevmode\vadjust pre{\hypertarget{ref-pool_attentional_2016}{}}%
-Pool, E., Brosch, T., Delplanque, S., \& Sander, D. (2016). Attentional bias for positive emotional stimuli: A meta-analytic investigation. \emph{Psychological Bulletin}, \emph{142}(1), 79--106. \url{https://doi.org/10.1037/bul0000026}
+Pool, E., Brosch, T., Delplanque, S., \& Sander, D. (2016). Attentional bias for positive emotional stimuli: A meta-analytic investigation. \url{https://doi.org/10.1037/bul0000026}
 
 \leavevmode\vadjust pre{\hypertarget{ref-pratto_automatic_1991}{}}%
 Pratto, F., \& John, O. P. (1991). Automatic vigilance: The attention-grabbing power of negative social information. \emph{Journal of Personality and Social Psychology}, \emph{61}(3), 380--391. \url{https://doi.org/10.1037//0022-3514.61.3.380}
+
+\leavevmode\vadjust pre{\hypertarget{ref-ratcliff_tics_2016}{}}%
+Ratcliff, R., Smith, P. L., Brown, S. D., \& McKoon, G. (2016). Diffusion {Decision} {Model}: {Current} {Issues} and {History}. \emph{Trends in Cognitive Sciences}, \emph{20}(4), 260--281. \url{https://doi.org/10.1016/j.tics.2016.01.007}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Rouder_2005_BHM_SDT}{}}%
 Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models with an application in the theory of signal detection {[}Journal Article{]}. \emph{Psychonomic Bulletin \& Review}, \emph{12}(4), 573--604. \url{https://doi.org/10.3758/bf03196750}
@@ -550,7 +566,7 @@ Strohminger, N., Knobe, J., \& Newman, G. (2017). The true self: A psychological
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching {[}Journal Article{]}. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. \url{https://doi.org/10.1037/a0029792}
 
 \leavevmode\vadjust pre{\hypertarget{ref-uhlmann_person-centered_2015}{}}%
-Uhlmann, E. L., Pizarro, D. A., \& Diermeier, D. (2015). A person-centered approach to moral judgment: \emph{Perspectives on Psychological Science}. \url{https://doi.org/10.1177/1745691614556679}
+Uhlmann, E. L., Pizarro, D. A., \& Diermeier, D. (2015). A person-centered approach to moral judgment: \url{https://doi.org/10.1177/1745691614556679}
 
 \leavevmode\vadjust pre{\hypertarget{ref-unkelbach_chapter_2020}{}}%
 Unkelbach, C., Alves, H., \& Koch, A. (2020). Chapter three - negativity bias, positivity bias, and valence asymmetries: Explaining the differential processing of positive and negative information. In B. Gawronski (Ed.), \emph{Advances in experimental social psychology} (Vol. 62, pp. 115--187). Academic Press. \url{https://doi.org/10.1016/bs.aesp.2020.04.005}
